@@ -1,4 +1,5 @@
 HEAD
+	+ Modify Squid reporter to handle filter categories
 	+ DisasterRecoveryDomains can notify other models
 	+ Fix remove conf backup after PSGI migration
 	+ Fix overwrite action on remote conf backup
